only generate adapter if no adapter is defined in the Json annotation